--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikewatching</title>
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="map.css" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <script src="map.js" type="module"></script>
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <div class="header-bar">
+      <h1>🚴🏼‍♀️ Bikewatching</h1>
+      <header>
+        <div class="slider-row">
+          <label for="timeFilter">Filter by time:</label>
+          <input type="range" id="time-slider" min="-1" max="1440" value="-1" />
+        </div>
+        <div class="time-display">
+          <time id="selected-time"></time>
+          <em id="any-time">(any time)</em>
+        </div>
+      </header>
+    </div>
+    
+    <div id="map">
+      <svg></svg>
+    </div>
   </body>
 </html>
