--- a/index.html
+++ b/index.html
@@ -31,5 +31,18 @@
     <div id="map">
       <svg></svg>
     </div>
+
+    <div class="legend">
+      <span class="legend-label">LEGEND:</span>
+      <div class="legend-item">
+        <span class="swatch swatch-departures"></span>More departures
+      </div>
+      <div class="legend-item">
+        <span class="swatch swatch-balanced"></span>Balanced
+      </div>
+      <div class="legend-item">
+        <span class="swatch swatch-arrivals"></span>More arrivals
+      </div>
+    </div>
   </body>
 </html>
